# entropia

./: .gitignore  Cargo.toml  LICENSE  README.md  TECHNICAL_REFERENCE.md  run_bin.rs
.github/workflows/: safe-tests.yml
docs/: testing-handoff.md
examples/: asm_demo.etpy  bof_args_test.etpy  bof_cna_test.etpy  bof_enum_demo.etpy  bof_filehunt.etpy  bof_inject.etpy  bof_lsass_dump.etpy  bof_manual_mem.etpy  bof_named_consts_demo.etpy  bof_opsec_stack_demo.etpy  bof_pslist.etpy  bof_pslist_spoofed.etpy  bof_sleep_mask_demo.etpy  bof_stack_strings_demo.etpy  bof_stage_test.etpy  bof_token_steal.etpy  bof_veh_test.etpy  opsec_string_test.etpy  process_enum.etpy  sc_manual_mem.etpy  sc_stack_strings_demo.etpy  seatbelt_tokenpriv.etpy  test.etpy
results/: hikscan.json
src/: asm.rs  ast.rs  cimport.rs  codegen.rs  coff.rs  dce.rs  encoder.rs  gc.rs  lexer.rs  macros.rs  main.rs  overflow.rs  parser.rs  polymorphism.rs  resolver.rs  shared.rs  typecheck.rs  veh.rs
stdlib/: bof.etpy  bytes.etpy  list.etpy  opsec_amsi.etpy  opsec_etw.etpy  opsec_unhook.etpy  option.etpy
stdlib/opsec/: bootstrap_noop.etpy  direct_syscall.etpy  indirect_syscall.etpy  sleep_ekko.etpy  sleep_foliage.etpy  sleep_mask.etpy  sleep_simple.etpy  stack_spoof.etpy
stdlib/win32/: authorization.h  console.h  cryptography.h  debug.h  environment.h  filesystem.h  foundation.h  index.md  io.h  kernel.h  libraryloader.h  memory.h  pipes.h  registry.h  security.h  systeminformation.h  systemservices.h  threading.h  toolhelp.h  windowsprogramming.h  winhttp.h  wininet.h  winsock.h
template/: README.md  setup.sh
template/codex/: config.toml
template/config/: env  launch_command.sh
tools/: safe_entropia_smoke_tests.py
tools/bof-loader/: Cargo.toml  README.md  self_boot.etpy
tools/bof-loader/src/: args.rs  beacon.rs  coff.rs  lib.rs  load.rs
tools/bof-runner/: Cargo.toml
tools/bof-runner/src/: main.rs
tools/entc-debug/: Cargo.toml
tools/entc-debug/scripts/: dap_asm_bp_smoke.py  dap_bof_output_smoke.py  dap_launch_smoke.py
tools/entc-debug/src/: dap.rs  main.rs  sourcemap.rs  tracer.rs
tools/entc-win32gen/: Cargo.toml
tools/entc-win32gen/src/: main.rs
tools/hik-scan/: scanner.py
tools/hik-scan/results/: hikscan.json
tools/vscode-entropykit/: README.md  build.py  language-configuration.json  package.json
tools/vscode-entropykit/syntaxes/: entropykit.tmLanguage.json
